force-app/main/default/objects/Hirist_com_Job_Form__c/Hirist_com_Job_Form__c.object-meta.xml
<CustomObject>
    <description>created on 5 Sep 2023 for learning purpose</description>
    <label>Hirist.com Job Form</label>
    <nameField>
        <displayFormat>HF-{00}</displayFormat>
        <label>Hirist Job Form</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hirist.com Job Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>