force-app/main/default/objects/Hirist_com_Job_Form__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hirist.com Job Forms</relationshipLabel>
    <relationshipName>Hirist_com_Job_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>