force-app/main/default/objects/Hirist_com_Job_Form__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <label>Candidate Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>