force-app/main/default/objects/Hirist_com_Job_Form__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Mainframe</fullName>
            </value>
            <value>
                <fullName>Dotnet</fullName>
            </value>
            <value>
                <fullName>Selenium Tester</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>