force-app/main/default/objects/Hirist_com_Job_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Candidate_Name__c</columns>
    <columns>Experience__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>